<resources>
    <string name="app_name">FastIndiaRider</string>
    <string name="tag_line">rider</string>
    <string name="welcome">Welcome Rider!</string>
    <string name="register_here">Register Here</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_holiday_history">Holidays</string>
    <string name="title_order_history">History</string>
    <string name="title_logout">Logout</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="send_otp">Send OTP</string>
    <string name="login">Login</string>
    <string name="duty_off">Duty Off</string>
    <string name="duty_on">Duty On</string>
    <string name="select_outlet">Select Outlet</string>
    <string name="today_s_performance">Today\'s Performance</string>
    <string name="pending">Pending</string>
    <string name="delivered">Delivered</string>
    <string name="order_no">Order No</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="call">Call</string>
    <string name="cancel">Cancel</string>
    <string name="cancelled">Cancelled</string>
    <string name="orders">Orders</string>
    <string name="pick_up_from">Pick up From</string>
    <string name="submit">submit</string>
    <string name="start_typing">Start Typing</string>
    <string name="customer_name">Customer Name</string>
    <string name="yesterday">Yesterday</string>
    <string name="today">Today</string>
    <string name="mtd">Month Till Date</string>
    <string name="advance_filter"><u>Advance Filter</u></string>
    <string name="payments">Payments</string>
    <string name="title_payment_history">Payments</string>
    <string name="filter">Filter</string>
</resources>